[gd_scene load_steps=2 format=3 uid="uid://manualjoinpanel"]

[ext_resource type="Script" path="res://ui/ManualJoinPanel.gd" id="1_jt8oi"]

[node name="ManualJoinPanel" type="Panel"]
custom_minimum_size = Vector2(360, 220)
clip_contents = false
script = ExtResource("1_jt8oi")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBox"]
text = "Manual Join"
vertical_alignment = 1

[node name="Instructions" type="Label" parent="MarginContainer/VBox"]
autowrap_mode = 1
text = "Enter an IP, hostname, or room code plus the port shared by the room owner."

[node name="AddressLabel" type="Label" parent="MarginContainer/VBox"]
text = "Address"

[node name="IpLineEdit" type="LineEdit" parent="MarginContainer/VBox"]
placeholder_text = "192.168.0.24, room.local, or CODE123"
text = ""

[node name="PortLabel" type="Label" parent="MarginContainer/VBox"]
text = "Port"

[node name="PortLineEdit" type="LineEdit" parent="MarginContainer/VBox"]
placeholder_text = "47845"
virtual_keyboard_type = 2
text = ""

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBox"]
visible = false
modulate = Color(1, 0.356863, 0.356863, 1)
autowrap_mode = 1
text = ""

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBox"]
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBox/Buttons"]
text = "Cancel"
size_flags_horizontal = 1

[node name="JoinButton" type="Button" parent="MarginContainer/VBox/Buttons"]
text = "Join"
size_flags_horizontal = 1
disabled = true
